--- a/index.html
+++ b/index.html
@@ -12,15 +12,56 @@
 
         <div class="bg"></div>
         <h1>Aprendendo CSS</h1>
-        <h2>Subtitulo qualquer</h2>
+        <h2>Tabela</h2>
 
-        <div class="novo-em">
-            <h2>Texto teste</h2>
-        </div>
+        <table>
+            <tr>
+                <th>Empresa</th>
+                <th>Contato</th>
+                <th>País</th>
+            </tr>
+            <tr>
+                <td>Global CO</td>
+                <td>Julia Lagos</td>
+                <td>Chile</td>
+            </tr>
+            <tr>
+                <td>Centro comercial Laguna</td>
+                <td>Jennifer Rios</td>
+                <td>Brasil</td>
+            </tr>
+            <tr>
+                <td>CE & C</td>
+                <td>Roberto Carlos</td>
+                <td>Brasil</td>
+            </tr>
+            <tr>
+                <td>Top Tech</td>
+                <td>João Cardoso</td>
+                <td>Portugal</td>
+            </tr>
+        </table>
 
-        <a href="time.html">conheça nosso time</a>
+        <h2>Lista de Compras</h2>
+        <ul>
+            <li>Arroz</li>
+            <li>Feijão</li>
+            <li>Batata</li>
+            <li>Abóbora</li>
+            <li>Maçã</li>
+        </ul>
 
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel sed quam et minus deleniti reiciendis debitis ab dolorum rem aliquam culpa eveniet cumque odit consequuntur, nisi corporis alias officia vitae fugit ea perspiciatis, ipsa ut. Perspiciatis doloremque earum nemo natus voluptates dolores dignissimos eligendi sequi adipisci qui. Porro fugit commodi sit, harum ab aut veniam, quod deleniti velit alias pariatur, illum voluptas! Quam nam ut quis voluptas itaque autem rerum animi quisquam reiciendis eius earum, inventore aperiam consequatur commodi? Deserunt earum magnam animi adipisci voluptatem illo. Recusandae deleniti cum saepe accusantium officia dolore error repellendus in tempora voluptate expedita, voluptas unde autem? Quo nulla perferendis inventore adipisci repudiandae voluptatem ex iure distinctio est, ratione consectetur impedit facere tenetur saepe exercitationem provident quas quaerat aperiam et? Aliquid id eos dolor aperiam temporibus aut quas velit nemo beatae sit dicta rerum quidem ut, eaque adipisci earum debitis doloribus, cupiditate mollitia iste maiores eius! Quaerat alias dignissimos, culpa officia aut enim nihil est, nulla reprehenderit itaque rem dolorum quibusdam illum nam cupiditate asperiores. Nihil eos itaque fuga maiores aspernatur quis quas dolores dicta, distinctio, deleniti eveniet? Ea tenetur rem, ad nesciunt magnam expedita sint at totam dicta aperiam cupiditate animi minima eos soluta maxime asperiores, aliquid quam eligendi reprehenderit? Nobis vero sed magni totam? Necessitatibus tempore sequi, quam tenetur eius dolorem ratione magnam minus deleniti ullam obcaecati odit libero eaque excepturi, eum dolorum, recusandae explicabo nostrum adipisci fuga doloribus in? A porro ratione cumque similique aliquam, sit, distinctio natus maiores voluptate maxime doloribus illo ipsam illum et sunt nostrum? Tenetur, illum a animi consectetur reprehenderit cum rem! Dolorem architecto ut totam repellendus quas est facilis et suscipit dolores explicabo ex odio dolor tempore, neque fugit aperiam libero ipsam quidem quae esse! Repellendus neque asperiores eaque rerum dolore exercitationem amet repudiandae doloremque impedit officiis earum repellat quo voluptates, eos deleniti cupiditate velit aspernatur. Explicabo molestiae delectus, voluptate esse recusandae nam iusto accusantium, quae obcaecati autem deleniti modi iure nemo, eligendi quam. Veritatis ipsum voluptatibus suscipit unde fuga in vero autem id perspiciatis. Aspernatur consequatur eveniet aliquid. Minima, doloremque ex officia similique quibusdam provident odio necessitatibus illo corrupti iure dolores quas soluta minus delectus reprehenderit possimus! Nulla molestias suscipit esse at autem magni ipsum. Pariatur et vitae, quis reprehenderit iure illo maxime eligendi neque blanditiis aliquid aperiam labore? Labore blanditiis numquam et eius nam ipsa cumque, temporibus quo aspernatur accusantium vel perspiciatis totam at a?</p>
+        <h2>Ranking dos times de volêi de praia</h2>
+        <ol>
+            <li>Bonde dos Caios</li>
+            <li>MM</li>
+            <li>Tigres Praianos</li>
+        </ol>
+
+        <div class="box"></div>
+        <img src="https://images.pexels.com/photos/531880/pexels-photo-531880.jpeg?cs=srgb&dl=pexels-pixabay-531880.jpg&fm=jpg" alt="">
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, fuga exercitationem nobis, similique fugiat maiores cumque sunt saepe delectus harum laborum distinctio. Labore, unde. Vel accusamus ad nobis et esse ratione cumque velit necessitatibus officia, sed, harum a quam doloremque voluptatem minus modi dolores repellat nesciunt eligendi laudantium reiciendis? Doloribus est similique ducimus alias illum labore dolorem atque aperiam iusto inventore. Vero, numquam! Corporis assumenda itaque voluptas aspernatur, saepe, praesentium ex illo tenetur quo deleniti magnam laborum soluta nihil quam incidunt impedit eaque repellat, iure maxime? Laboriosam, vero ullam. Dolore, numquam nam! Deleniti inventore ea temporibus architecto repellendus. Hic voluptate laboriosam quasi voluptatibus assumenda aperiam fugiat, accusantium qui quam ullam, pariatur inventore? Distinctio et eaque accusamus labore laborum mollitia culpa reiciendis at delectus vitae illum accusantium atque eum doloribus pariatur fuga dolores, amet inventore quisquam facilis quas aut nesciunt sapiente nulla! Explicabo nam est ex ab laudantium! Fugiat molestiae aperiam mollitia, sit illo unde modi animi nihil praesentium tempore voluptate repudiandae ducimus ipsa explicabo maxime natus, distinctio, porro accusamus. Voluptatibus minima dolore veniam velit officia quisquam, tempore dolorem, officiis molestiae id doloremque quidem! Tempora quisquam asperiores, ab et laboriosam harum sint saepe soluta autem, sequi magnam maiores eligendi iste porro vel. Animi, nostrum, consequatur earum culpa cumque veniam illum et, necessitatibus veritatis dignissimos sed iusto obcaecati! Consequuntur quod nesciunt sequi laborum cumque porro tempora assumenda exercitationem, laudantium harum incidunt quis delectus blanditiis ex minima non modi fuga velit iste voluptates doloremque suscipit quos, tenetur aut? Facilis quisquam, ipsa reiciendis dolorum quae cumque iusto placeat repudiandae repellendus delectus sequi, architecto dolorem! Hic, id voluptas alias, sunt possimus et ut recusandae non, molestias iste libero eum iure sit doloremque. Accusantium vel blanditiis eaque quia ea sint a, facilis perferendis nesciunt reiciendis officia numquam pariatur voluptate aliquam, veniam assumenda. Nesciunt laboriosam quibusdam eos eius, laborum, consequuntur nostrum aliquam voluptatem illo illum tenetur molestiae repudiandae quae, fugiat in? Eligendi sit quisquam quam error! Nihil sunt aliquam deserunt neque. Fugiat, quod, libero aliquam vel enim perferendis ad error perspiciatis neque porro laborum rerum, illum dolore fugit molestias et ipsam. Sunt tenetur error, consequuntur aperiam similique aliquam animi, voluptas quas architecto eius suscipit molestias fugit dicta vel deleniti omnis exercitationem? Deserunt nisi accusantium excepturi odit laborum modi quibusdam voluptas repellat vero maiores? Explicabo natus quisquam excepturi! Aut, placeat explicabo? Pariatur maxime, veritatis voluptate doloribus eum sequi asperiores molestiae aspernatur eligendi quidem, magnam deleniti vel. Maxime, esse.</p>
     </main>
 </body>
 </html>
