study position and flexbox. class 5

--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 </head>
 <body>
     <main>
-
+        <nav class="menu">
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="time.html">Nosso time</a></li>
+            </ul>
+        </nav>
         <div class="bg"></div>
         <h1>Aprendendo CSS</h1>
         <h2>Tabela</h2>
@@ -58,7 +63,80 @@
             <li>Tigres Praianos</li>
         </ol>
 
-        <div class="box"></div>
+
+        <section class="contact-list">
+            <h2>A</h2>
+            <ul>
+                <li>Ana</li>
+                <li>Andressa</li>
+                <li>Andressa</li>
+                <li>Andressa</li>
+                <li>Andressa</li>
+                <li>Andressa</li>
+            </ul>
+
+            <h2>B</h2>
+            <ul>
+                <li>Beatriz</li>
+                <li>Bernardo</li>
+                <li>Bernardo</li>
+                <li>Bernardo</li>
+                <li>Bernardo</li>
+                <li>Bernardo</li>
+            </ul>
+
+            <h2>C</h2>
+            <ul>
+                <li>Clarisse</li>
+                <li>Cleide</li>
+                <li>Cleide</li>
+                <li>Cleide</li>
+                <li>Cleide</li>
+                <li>Cleide</li>
+            </ul>
+        </section>
+
+        <div class="boxes">
+            <div class="box">
+                Texto interior 1
+            </div>
+
+            <div class="box">
+                Texto interior 2
+            </div>
+
+            <div class="box">
+                Texto interior 3
+            </div>
+
+            <div class="box">
+                Texto interior 4
+            </div>
+
+            <div class="box">
+                Texto interior 5
+            </div>
+
+            <div class="box">
+                Texto interior 6
+            </div> 
+
+            <div class="box">
+                Texto interior 7
+            </div> 
+            
+            <div class="box">
+                Texto interior 8
+            </div> 
+            
+            <div class="box">
+                Texto interior 9
+            </div> 
+
+            <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam libero, explicabo eveniet velit sit nisi voluptatum voluptas vitae repellat maiores a incidunt similique itaque, in iste? Nam unde reprehenderit eligendi minima nostrum perferendis exercitationem quasi rerum esse eos, eaque dolorem sed vero quae labore aliquid libero dolores porro iure ab hic officia modi maxime placeat. Eaque magni placeat accusamus, unde cum ullam? Expedita sequi quidem deserunt in, nulla dolorum a alias, nihil fugit perferendis quo explicabo iusto cum incidunt architecto cupiditate facere accusantium nostrum nam neque error aspernatur itaque? Nesciunt maxime fuga consequuntur reiciendis labore iure iste quam obcaecati enim?</span>
+        </div>
+
+
         <img src="https://images.pexels.com/photos/531880/pexels-photo-531880.jpeg?cs=srgb&dl=pexels-pixabay-531880.jpg&fm=jpg" alt="">
 
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, fuga exercitationem nobis, similique fugiat maiores cumque sunt saepe delectus harum laborum distinctio. Labore, unde. Vel accusamus ad nobis et esse ratione cumque velit necessitatibus officia, sed, harum a quam doloremque voluptatem minus modi dolores repellat nesciunt eligendi laudantium reiciendis? Doloribus est similique ducimus alias illum labore dolorem atque aperiam iusto inventore. Vero, numquam! Corporis assumenda itaque voluptas aspernatur, saepe, praesentium ex illo tenetur quo deleniti magnam laborum soluta nihil quam incidunt impedit eaque repellat, iure maxime? Laboriosam, vero ullam. Dolore, numquam nam! Deleniti inventore ea temporibus architecto repellendus. Hic voluptate laboriosam quasi voluptatibus assumenda aperiam fugiat, accusantium qui quam ullam, pariatur inventore? Distinctio et eaque accusamus labore laborum mollitia culpa reiciendis at delectus vitae illum accusantium atque eum doloribus pariatur fuga dolores, amet inventore quisquam facilis quas aut nesciunt sapiente nulla! Explicabo nam est ex ab laudantium! Fugiat molestiae aperiam mollitia, sit illo unde modi animi nihil praesentium tempore voluptate repudiandae ducimus ipsa explicabo maxime natus, distinctio, porro accusamus. Voluptatibus minima dolore veniam velit officia quisquam, tempore dolorem, officiis molestiae id doloremque quidem! Tempora quisquam asperiores, ab et laboriosam harum sint saepe soluta autem, sequi magnam maiores eligendi iste porro vel. Animi, nostrum, consequatur earum culpa cumque veniam illum et, necessitatibus veritatis dignissimos sed iusto obcaecati! Consequuntur quod nesciunt sequi laborum cumque porro tempora assumenda exercitationem, laudantium harum incidunt quis delectus blanditiis ex minima non modi fuga velit iste voluptates doloremque suscipit quos, tenetur aut? Facilis quisquam, ipsa reiciendis dolorum quae cumque iusto placeat repudiandae repellendus delectus sequi, architecto dolorem! Hic, id voluptas alias, sunt possimus et ut recusandae non, molestias iste libero eum iure sit doloremque. Accusantium vel blanditiis eaque quia ea sint a, facilis perferendis nesciunt reiciendis officia numquam pariatur voluptate aliquam, veniam assumenda. Nesciunt laboriosam quibusdam eos eius, laborum, consequuntur nostrum aliquam voluptatem illo illum tenetur molestiae repudiandae quae, fugiat in? Eligendi sit quisquam quam error! Nihil sunt aliquam deserunt neque. Fugiat, quod, libero aliquam vel enim perferendis ad error perspiciatis neque porro laborum rerum, illum dolore fugit molestias et ipsam. Sunt tenetur error, consequuntur aperiam similique aliquam animi, voluptas quas architecto eius suscipit molestias fugit dicta vel deleniti omnis exercitationem? Deserunt nisi accusantium excepturi odit laborum modi quibusdam voluptas repellat vero maiores? Explicabo natus quisquam excepturi! Aut, placeat explicabo? Pariatur maxime, veritatis voluptate doloribus eum sequi asperiores molestiae aspernatur eligendi quidem, magnam deleniti vel. Maxime, esse.</p>
